<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="63sp"
                android:elevation="0sp"
                app:cardElevation="8sp"
                app:cardCornerRadius="4sp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <TextView
                            android:id="@+id/signin"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:background="@color/white"
                            android:paddingBottom="12sp"
                            android:paddingTop="12sp"
                            android:text="@string/sign_in"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:id="@+id/signup"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:background="@color/white"
                            android:paddingBottom="12sp"
                            android:paddingTop="12sp"
                            android:text="@string/signup"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:gravity="center_horizontal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linearLayout1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/signin_signup_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:gravity="center_horizontal" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16sp">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16sp"
                                android:drawableStart="@color/cardview_light_background"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:drawableLeft="@color/cardview_light_background"
                                tools:ignore="RtlHardcoded"
                                android:autofillHints="" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16sp"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16sp"
                                android:drawableStart="@color/cardview_light_background"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:drawableLeft="@color/cardview_light_background"
                                tools:ignore="RtlHardcoded"
                                android:autofillHints=""/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/signin_signup_btn"
                            android:layout_width="210sp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="16sp"
                            android:layout_marginTop="24sp"
                            android:background="@color/cardview_light_background"
                            android:drawableLeft="@color/white"
                            android:drawableStart="@color/white"
                            android:paddingLeft="16sp"
                            android:paddingRight="16sp"
                            android:text="@string/sign_in"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:ignore="RtlHardcoded" />

                        <TextView
                            android:id="@+id/forgot_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="32sp"
                            android:text="@string/forgot_your_password"
                            android:textAlignment="center"
                            android:textColor="#4f4f4f"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:gravity="center_horizontal" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>